--- a/petrReact/ch06/React_step_2/package.json
+++ b/petrReact/ch06/React_step_2/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-react": "^7.23.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^4.0.3",
