--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "eslint": "^7.23.0",
     "eslint-plugin-react": "^7.23.1"
+  },
+  "dependencies": {
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   }
 }
